// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ErrorHandler NetworkError 1`] = `
Array [
  Array [
    "Network error",
  ],
]
`;

exports[`ErrorHandler unknown error 1`] = `
Array [
  Array [
    "Unknown error",
  ],
]
`;
